# snakemake-storage-plugin-dirac

./: pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_storage_plugin_dirac/: __init__.py
