[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snakemake-storage-plugin-dirac"
version = "0.1.0"
description = ""
authors = [ "jannisspeer <jannis.speer@tutanota.com>",]
readme = "README.md"
repository = "https://github.com/your/plugin"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/dirac.html"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.17.3"
snakemake-interface-storage-plugins = "^3.3.0"
DIRAC = "^8.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
coverage = "^7.6.1"
pytest = "^8.3.2"
snakemake = "^8.18.1"
